<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/location_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="11dp"
            android:src="@drawable/ic_location"
            app:layout_constraintBottom_toBottomOf="@id/location_value"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/location_value"
            app:layout_constraintTop_toTopOf="@id/location_value" />

        <TextView
            android:id="@+id/location_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/mark_pro_medium"
            android:text="Zihuatanejo, Gro"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintLeft_toRightOf="@id/location_icon"
            app:layout_constraintRight_toLeftOf="@id/location_expand"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/location_expand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:src="@drawable/ic_expand"
            app:layout_constraintBottom_toBottomOf="@id/location_value"
            app:layout_constraintLeft_toRightOf="@id/location_value"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/location_value"
            app:tint="@color/dark_grey" />

        <ImageView
            android:id="@+id/filter_options"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="20dp"
            android:scaleType="center"
            android:src="@drawable/ic_filter"
            app:layout_constraintBottom_toBottomOf="@id/location_value"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/location_value" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/category_title"
                style="@style/ExplorerSectionTitleStyle"
                android:text="@string/category_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/expand_categories"
                app:layout_constraintTop_toBottomOf="@id/location_value" />

            <TextView
                android:id="@+id/expand_categories"
                style="@style/ExplorerSectionExpandButtonStyle"
                android:text="@string/categories_expand"
                app:layout_constraintBottom_toBottomOf="@id/category_title"
                app:layout_constraintLeft_toRightOf="@id/category_title"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/category_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/category_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingHorizontal="@dimen/explorer_list_padding_horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/category_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="35dp"
                android:textColorHint="@color/blue_half_opacity"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="100dp"
                app:boxCornerRadiusBottomStart="100dp"
                app:boxCornerRadiusTopEnd="100dp"
                app:boxCornerRadiusTopStart="100dp"
                app:hintTextColor="@color/blue_half_opacity"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/search_scan_qr"
                app:layout_constraintTop_toBottomOf="@id/category_list"
                app:startIconDrawable="@drawable/ic_search"
                app:startIconTint="@color/orange">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_input_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_hint"
                    android:inputType="text"
                    android:textColor="@color/blue_half_opacity"
                    android:textSize="@dimen/text_size_normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/search_scan_qr"
                style="@style/IconButtonStyle"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="37dp"
                android:backgroundTint="@color/orange"
                app:cornerRadius="100dp"
                app:icon="@drawable/ic_qr"
                app:iconTint="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/search_input_layout"
                app:layout_constraintLeft_toRightOf="@id/search_input_layout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/search_input_layout" />

            <TextView
                android:id="@+id/hot_sales_title"
                style="@style/ExplorerSectionTitleStyle"
                android:text="@string/hot_sales_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/expand_hot_sales"
                app:layout_constraintTop_toBottomOf="@id/search_input_layout" />

            <TextView
                android:id="@+id/expand_hot_sales"
                style="@style/ExplorerSectionExpandButtonStyle"
                android:text="@string/expand_hot_sales"
                app:layout_constraintBottom_toBottomOf="@id/hot_sales_title"
                app:layout_constraintLeft_toRightOf="@id/hot_sales_title"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/hot_sales_title" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/hot_sales_list"
                android:layout_width="0dp"
                android:layout_height="233dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hot_sales_title" />

            <ProgressBar
                android:id="@+id/hot_sales_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:indeterminateTint="@color/dark_grey"
                app:layout_constraintBottom_toBottomOf="@id/hot_sales_list"
                app:layout_constraintLeft_toLeftOf="@id/hot_sales_list"
                app:layout_constraintRight_toRightOf="@id/hot_sales_list"
                app:layout_constraintTop_toTopOf="@id/hot_sales_list" />

            <TextView
                android:id="@+id/best_seller_title"
                style="@style/ExplorerSectionTitleStyle"
                android:text="@string/best_seller_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/best_seller_expand"
                app:layout_constraintTop_toBottomOf="@id/hot_sales_list" />

            <TextView
                android:id="@+id/best_seller_expand"
                style="@style/ExplorerSectionExpandButtonStyle"
                android:text="@string/categories_expand"
                app:layout_constraintBottom_toBottomOf="@id/best_seller_title"
                app:layout_constraintLeft_toRightOf="@id/best_seller_title"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/best_seller_title" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/best_sellers_list"
                android:layout_width="0dp"
                android:layout_height="467dp"
                android:layout_marginVertical="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/best_seller_title" />

            <ProgressBar
                android:id="@+id/best_sellers_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:indeterminateTint="@color/dark_grey"
                app:layout_constraintBottom_toBottomOf="@id/best_sellers_list"
                app:layout_constraintLeft_toLeftOf="@id/best_sellers_list"
                app:layout_constraintRight_toRightOf="@id/best_sellers_list"
                app:layout_constraintTop_toTopOf="@id/best_sellers_list" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>